add GET /oracle endpoint
